# vector-databases-course

./: .env.example  .gitignore  README.md  app.py  chroma_emb.py  chroma_openai_emb.py  chroma_persist.py  lang_test.py  main.py  pinecone_db_llm_lang_chain.py  pinecone_intro.py  pyproject.toml  raw_emb.py  requirements.txt  vector_db_llm.py  vector_db_llm_lang_chain.py
chunking/: prod_ready.py  semantic_chunking.py
hybrid_search/: final_production.py  prod_hybrid_search.py
pg_vector_section/1-setup/: 01_docker_setup.sh  02_basic_connection.py  03_enable_extension.sql  04_quick_demo.py  basic_data_types.sql
pg_vector_section/2-creating-querying/: 01_create_table.sql  02_insert_vectors.py  03_similarity_search.py  04_metadata_filtering.py
pg_vector_section/3-similiarity-search/: 02_insert_vectors.py  03_similarity_search.py  04_metadata_filtering.py
pg_vector_section/4-indexes/: 01_create_hnsw_index.sql  02_create_ivfflat_index.sql  03_index_comparison.py
pg_vector_section/5-langchain/: 01_setup_vectorstore.py  02_add_documents.py  03_similarity_search.py  04_rag_chain.py
pg_vector_section/6-supabase/: 01_supabase_connection.py  02_connection_pooling.py  03_production_example.py
