[project]
name = "vector-databases-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.5",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.25",
    "langchain-openai>=1.1.12",
    "langchain-pinecone>=0.2.13",
    "langchain-text-splitters>=1.1.1",
    "openai>=2.30.0",
    "pinecone>=7.3.0",
    "python-dotenv>=1.2.2",
]
